implemented the idpc compliance section

--- a/web/app/views/dashboard.scala.html
+++ b/web/app/views/dashboard.scala.html
@@ -30,7 +30,7 @@
                 <a id="descriptionlink" data-toggle="tab" href="#descriptiontab">Description</a>
               </li>
               <li id="idpcpage">
-                <a id="idpctablink" data-toggle="tab" href="#idpctab">IDPC Privacy</a>
+                <a id="idpctablink" data-toggle="tab" href="#idpctab">IDPC Compliance</a>
               </li>
               <li id="confidentialpage">
                 <a id="confidentiallink" data-toggle="tab" href="#confidentialtab">Confidential Fields</a>
@@ -307,7 +307,7 @@
                           </li>
                         {{/unless}}
                         <li>
-                          {{ descriptionDatasets.count }} datasets - page {{ descriptionDatasets.page }} of {{ descriptionDatasets.totalPages }}
+                          {{ descriptionDatasets.count }} datasets {{ descriptionDatasets.description }} - page {{ descriptionDatasets.page }} of {{ descriptionDatasets.totalPages }}
                         </li>
                         {{#unless descLast}}
                           <li class="next">
@@ -322,7 +322,11 @@
                       <thead>
                         <tr>
                           <th class="text-center">Dataset</th>
-                          <th class="text-center">Fields With Description</th>
+                          {{#if descriptionDatasets.isDatasetLevel}}
+                            <th class="text-center">Description</th>
+                          {{else}}
+                            <th class="text-center">Fields With Description</th>
+                          {{/if}}
                           <th class="text-center">Owners</th>
                         </tr>
                       </thead>
@@ -371,6 +375,168 @@
                 </div>
               </div>
               <div id="idpctab" class="tab-pane">
+                <div class="row">
+                  <div class="col-xs-12 col-md-4">
+                    <h4>IDPC Compliance for {{ currentComplianceUser.displayName }}</h4>
+                    <table class="table table-bordered table-condensed table-hover">
+                      <thead>
+                        <tr>
+                          <th class="text-center">Name</th>
+                          <th class="text-center">Completion</th>
+                          <th class="text-center">Total Potential</th>
+                          <th class="text-center">Has Purge Option</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>
+                            <img src={{currentComplianceUser.iconUrl}} title={{currentComplianceUser.displayName}}
+                              width="25px"
+                              height="25px"/>
+                            <a href='metadata#/dashboard/{{currentComplianceUser.userName}}' title={{currentComplianceUser.displayName}}>
+                              {{ currentComplianceUser.displayName }}
+                            </a>
+                          </td>
+                          <td class="text-center">{{ currentComplianceUser.completed }}%</td>
+                          <td class="text-center">{{ currentComplianceUser.potentialDatasets  }}</td>
+                          <td class="text-center">{{ currentComplianceUser.confirmed }}</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                    <h4>Ticket Roll-Up for Individual User</h4>
+                    <table class="table table-bordered table-condensed table-hover">
+                      <thead>
+                        <tr>
+                          <th class="text-center">Name</th>
+                          <th class="text-center">Completion</th>
+                          <th class="text-center">Total Potential</th>
+                          <th class="text-center">Has Purge Option</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                          {{#if userNoIdpcMembers}}
+                            <tr>
+                              <td colspan="5">
+                                <div class="row">
+                                  <div class="col-xs-12 text-center">
+                                    This user has no one that reports to them.
+                                  </div>
+                                </div>
+                              </td>
+                            </tr>
+                          {{else}}
+                            {{#each complianceOwners as |user|}}
+                              <tr>
+                                <td>
+                                  <img src={{user.iconUrl}} title={{user.displayName}}
+                                    width="25px"
+                                    height="25px"/>
+                                  <a href='metadata#/dashboard/{{user.userName}}' title={{user.displayName}}>
+                                    {{ user.displayName }}
+                                  </a>
+                                </td>
+                                <td class="text-center">{{ user.completed }}%</td>
+                                <td class="text-center">{{ user.potentialDatasets }}</td>
+                                <td class="text-center">{{ user.confirmed }}</td>
+                              </tr>
+                            {{/each}}
+                          {{/if}}
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="col-xs-12 col-md-8">
+                    <div class="row">
+                      <div class="col-xs-9">
+                        <h4>List of Datasets</h4>
+                      </div>
+                      <div class="col-xs-3 headerBarFilter">
+                        <form class="form-inline">
+                          <select id="idpcShowOption" class="form-control" {{action "idpcOptionChanged" on="change"}}>
+                            {{#each idpcOptions as |option index|}}
+                              {{#if index}}
+                                <option value={{option.option}}>{{option.value}}
+                                </option>
+                              {{else}}
+                                <option selected value={{option.option}}>{{option.value}}
+                                </option>
+                              {{/if}}
+                            {{/each}}
+                          </select>
+                        </form>
+                      </div>
+                    </div>
+                    <div class="search-pagination">
+                      <ul class="pager">
+                        {{#unless idpcFirst}}
+                          <li class="previous">
+                            <a {{ action "prevIdpcPage" }}>
+                                &larr; Prev
+                            </a>
+                          </li>
+                        {{/unless}}
+                        <li>
+                          {{ complianceDatasets.count }} datasets - page {{ complianceDatasets.page }} of {{ complianceDatasets.totalPages }}
+                        </li>
+                        {{#unless idpcLast}}
+                          <li class="next">
+                            <a {{ action "nextIdpcPage" }}>
+                              Next &rarr;
+                            </a>
+                          </li>
+                        {{/unless}}
+                      </ul>
+                    </div>
+                    <table class="table table-bordered table-condensed table-hover table-striped">
+                      <thead>
+                        <tr>
+                          <th class="text-center">Dataset</th>
+                          <th class="text-center">Purge Option</th>
+                          <th class="text-center">Owners</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        {{#if idpcInProgress}}
+                          <tr>
+                            <td colspan="8" class="text-center">
+                              <div class="row">
+                                <div class="col-xs-12">
+                                  <i class="fa fa-spinner spinning fa-4x">
+                                  </i>
+                                </div>
+                              </div>
+                            </td>
+                          </tr>
+                        {{else}}
+                          {{#if userNoComplianceFields}}
+                            <tr>
+                              <td colspan="8">
+                                <div class="row">
+                                  <div class="col-xs-12 text-center">
+                                    This user has no datasets with IDPC compliance information.
+                                  </div>
+                                </div>
+                              </td>
+                            </tr>
+                          {{else}}
+                            {{#each complianceDatasets.datasets as |dataset|}}
+                              <tr>
+                                <td>
+                                  <a href="/#/datasets/{{dataset.datasetId}}">
+                                    {{ dataset.datasetName }}
+                                  </a>
+                                </td>
+                                <td class="text-center">
+                                  {{ dataset.confidentialFieldList }}
+                                </td>
+                                <td class="text-center">{{ dataset.ownerId }}</td>
+                              </tr>
+                            {{/each}}
+                          {{/if}}
+                        {{/if}}
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
               </div>
               <div id="confidentialtab" class="tab-pane">
                 <div class="row">
