--- a/web/app/views/index.scala.html
+++ b/web/app/views/index.scala.html
@@ -986,7 +986,7 @@
             <a data-toggle="tab"
               title="Accessibilities"
               href="#accesstab">
-              Accessibilities
+              Availability
             </a>
           </li>
         </ul>
@@ -1161,7 +1161,7 @@
             <h4 class="panel-title">
               <a class="collapsed" data-toggle="collapse" data-parent="#accordion"
                href="#accessview" aria-expanded="false" aria-controls="accessData">
-                Accessiblities
+                Availability
               </a>
             </h4>
           </div>
